apps/ha/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homeassistant
          image: docker.io/homeassistant/home-assistant:2026.10.0
          ports:
            - containerPort: 8123
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - mountPath: /config
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ha-config
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: NodePort
  selector:
    app: homeassistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      nodePort: 31823
      protocol: TCP
