apps/ha/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ha-db-rw-nodeport
  namespace: ha
spec:
  type: NodePort
  selector:
    cnpg.io/cluster: ha-db
    cnpg.io/instanceRole: primary
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      nodePort: 30432
