apps/ha/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.doink.co.za`)
      services:
        - name: homeassistant
          port: 8123
  tls:
    secretName: ha-tls
